<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:fitsSystemWindows="true"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
android:paddingLeft="20dp"
android:paddingRight="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_submission"
            android:textSize="16sp"
            android:textColor="#F15B2A"
            android:gravity="center_horizontal" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/gradient_line"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <EditText
            android:id="@+id/etFirstName"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_frame"
            android:hint="@string/first_name"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_frame"
            android:hint="@string/last_name"
            android:padding="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_frame"
        android:hint="@string/email_address"
        android:padding="10dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etGithubLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_frame"
        android:hint="@string/project_on_github_link"
        android:padding="10dp"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/btnSubmit"
        style="@android:style/Widget.Button.Small"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/submit_button"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>