<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/submit"
            android:layout_gravity="end"
            android:background="@drawable/button"
            android:textColor="@android:color/black"
            android:textAllCaps="false"/>
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/darker_gray"
        app:tabTextAppearance="@style/CustomTextAppearanceTab">

        <android.support.design.widget.TabItem
            android:id="@+id/tabLearningLeaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learning_leaders" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabSkillIQLeaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_iq_leaders" />

    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v4.view.ViewPager>

</LinearLayout>